# dnd

./: LICENSE  README.md  playground.ipynb  pyproject.toml  requirements.txt  test_psg.py
src/dnd.egg-info/: PKG-INFO  SOURCES.txt
src/dnd/dice/: command_parser.py  dice.py  dice_gui.py
src/dnd/dice/assets/: output.py
test/: test_dice.py
